<resources>
    <string name="app_name">Zenith Revenue</string>
    <string name="daftar">Daftar</string>
    <string name="moto">Your Event Solutions</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Masuk</string>
    <string name="name">Nama Panjang</string>
    <string name="j_k">Jenis Kelamin</string>
    <string name="title_home">Home</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="useremail">Nomor Telepon atau Email</string>
    <string name="passulang">Ulangi Password</string>
    <string name="masukgoo">Google</string>
    <string name="masukfb">Facebook</string>
    <string name="feed">Feed</string>
    <string name="cate">Categories</string>
    <string name="service">Services</string>
    <string name="see_all">See All</string>
    <string name="telp">Nomor Telpon</string>
    <string name="cari">Cari di ZE</string>
    <string name="best">Best Seller</string>
    <string name="edit">Edit Profil</string>
    <string name="history">History</string>
    <string name="myorder">Order Saya</string>
    <string name="myfav">Wishlist Saya</string>
    <string name="jadieo">Buka EO</string>
</resources>
