<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="44dp"
            android:fontFamily="@font/googlesans"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/ed_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_person_user"
            android:drawablePadding="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/googlesans"/>

        <EditText
            android:id="@+id/ed_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/googlesans"/>

        <EditText
            android:id="@+id/ed_Telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/telp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_telpon"
            android:drawablePadding="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/googlesans"/>

        <EditText
            android:id="@+id/ed_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:fontFamily="@font/googlesans"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingTop="12dp"
            android:paddingEnd="5dp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/ed_PassUlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passulang"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/googlesans"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="gone"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDaftar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign"
            android:text="@string/daftar"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginTop="45dp"
            android:elevation="20dp"
            android:fontFamily="@font/googlesans"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>