<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/headerbackg"/>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/phutooo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/userProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photo"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="Nama Profile"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userProfile"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/edit"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_next"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/history"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_next"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/myorder"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_next"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/myfav"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_next"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:text="@string/jadieo"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_next"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>