<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/homebg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView_Daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesans"
            android:textColor="@color/colorputih"
            android:textSize="48sp"
            tools:text="@string/daftar"
            android:layout_marginStart="45dp"/>

        <LinearLayout
            android:id="@+id/layout_Masukdong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_Daftar"
            android:layout_marginTop="110dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_Belum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans"
                android:text="Sudah punya akun?"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tv_Daftardong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans"
                android:text="Masuk"
                android:textColor="@color/color2"
                android:layout_marginStart="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layout_Masukdong"
            android:layout_marginTop="25dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonGoogle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fbgoogle_btn"
                android:text="@string/masukgoo"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:elevation="20dp"
                android:fontFamily="@font/googlesans"
                android:drawableStart="@drawable/googlelogo"
                android:drawablePadding="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="25dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonFacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fbgoogle_btn"
                android:text="@string/masukfb"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:elevation="20dp"
                android:fontFamily="@font/googlesans"
                android:drawableStart="@drawable/fblogo"
                android:drawablePadding="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="25dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_Atau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesans"
            android:text="atau masuk dengan"
            android:textSize="14sp"
            android:layout_below="@id/layout_Button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>

        <View
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_toEndOf="@id/tv_Atau"
            android:layout_below="@id/layout_Button"
            android:layout_marginTop="35dp"
            android:layout_marginStart="13dp"/>

        <View
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_toStartOf="@id/tv_Atau"
            android:layout_below="@id/layout_Button"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="13dp"/>

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/eT_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/useremail"
            android:background="@drawable/fbgoogle_btn"
            android:padding="12dp"
            android:layout_below="@id/tv_Atau"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonDaftar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign"
            android:text="@string/daftar"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_below="@id/eT_Email"
            android:layout_marginTop="40dp"
            android:elevation="20dp"
            android:fontFamily="@font/googlesans"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>
        <!--<EditText-->
            <!--android:id="@+id/et_Nama"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:hint="@string/name"-->
            <!--android:inputType="textPersonName"-->
            <!--android:layout_marginTop="180dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:drawableLeft="@drawable/ic_person"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:paddingLeft="7dp"-->
            <!--android:paddingRight="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_Email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/prompt_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:layout_below="@id/et_Nama"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:drawableLeft="@drawable/ic_mail"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:paddingLeft="7dp"-->
            <!--android:paddingRight="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_jkelamin"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/j_k"-->
            <!--android:layout_below="@id/et_Email"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="#000"/>-->
        <!--<RadioGroup-->
            <!--android:id="@+id/rg_jkelamin"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/tv_jkelamin"-->
            <!--android:orientation="horizontal">-->
            <!--<RadioButton-->
                <!--android:id="@+id/rb_laki"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Laki-laki"/>-->
            <!--<RadioButton-->
                <!--android:id="@+id/rb_perempuan"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Perempuan"-->
                <!--android:layout_marginLeft="20dp"/>-->
        <!--</RadioGroup>-->
        <!--<EditText-->
            <!--android:id="@+id/et_Username"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/username"-->
            <!--android:inputType="textPersonName"-->
            <!--android:layout_below="@id/et_Email"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:drawableLeft="@drawable/ic_person_user"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:paddingLeft="7dp"-->
            <!--android:paddingRight="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_Telpon"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/telp"-->
            <!--android:inputType="phone"-->
            <!--android:layout_below="@id/et_Username"-->
            <!--android:layout_marginTop="10dp"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_Pass"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/prompt_password"-->
            <!--android:inputType="textVisiblePassword"-->
            <!--android:layout_below="@id/et_Email"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:drawableLeft="@drawable/ic_lock"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:paddingLeft="7dp"-->
            <!--android:paddingRight="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_PassUlang"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/passulang"-->
            <!--android:inputType="textVisiblePassword"-->
            <!--android:layout_below="@id/et_Pass"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:drawableLeft="@drawable/ic_lock"-->
            <!--android:drawablePadding="20dp"-->
            <!--android:paddingLeft="7dp"-->
            <!--android:paddingRight="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"/>-->
    </RelativeLayout>
</ScrollView>